--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Hello World!"
+            android:layout_marginRight="8sp"
             />
+        <Button
+            android:id="@+id/btb_exit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/exit">
+
+        </Button>
     </LinearLayout>
     <com.google.android.material.slider.Slider
         android:layout_width="wrap_content"
@@ -52,5 +60,6 @@
         >
 
     </SurfaceView>
+
 
 </LinearLayout>
